Web Inspector: Uncaught Exception: SyntaxError: Unexpected identifier 'E'. Expected either a closing ']' or a ',' following an array element. https://bugs.webkit.org/show_bug.cgi?id=211163

Reviewed by Joseph Pecoraro.

Source/WebKit:

* WebProcess/Inspector/WebInspectorUI.cpp:
(WebKit::WebInspectorUI::updateFindString):
* WebProcess/Inspector/RemoteWebInspectorUI.cpp:
(WebKit::RemoteWebInspectorUI::updateFindString):
Use the newly exposed `JSON::Value::escapeString` to ensure that the `findString` will not
throw a JavaScript exception when placed in the `InspectorFrontendAPI` call.

Source/WTF:

* wtf/JSONValues.h:
* wtf/JSONValues.cpp:
(WTF::JSONImpl::appendDoubleQuotedString):
(WTF::JSONImpl::Value::escapeString): Added.
Pull out and expose the logic for escaping strings so it can be used elsewhere.


Canonical link: https://commits.webkit.org/224077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260887 268f45cc-cd09-0410-ab3c-d52691b4dbfc