Source/WebKit/WebProcess/Inspector/RemoteWebInspectorUI.cpp
@@ -69,7 +69,9 @@ void RemoteWebInspectorUI::initialize(DebuggableInfoData&& debuggableInfo, const
 
 void RemoteWebInspectorUI::updateFindString(const String& findString)
 {
-    m_frontendAPIDispatcher.dispatchCommand("updateFindString"_s, findString);
+    StringBuilder builder;
+    JSON::Value::escapeString(builder, findString);
+    m_frontendAPIDispatcher.dispatchCommand("updateFindString"_s, builder.toString());
 }
 
 void RemoteWebInspectorUI::didSave(const String& url)
